feat: Add production server setup, sample attendance data, and minor UI styling adjustments.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                     <label class="form-label">CREDENTIAL</label>
                     <input type="password" id="password" class="form-input" required placeholder="••••••••">
                 </div>
+
                 <button type="submit" class="btn btn-primary" style="width:100%">Authenticate</button>
-                <button type="button" class="btn btn-outline" style="width:100%; margin-top:15px; border:none;" onclick="backToRoles()">← Return</button>
+                <button type="button" class="btn btn-outline" style="width:100%; margin-top:15px; border:none;" onclick="backToRoles()">← RETURN</button>
             </form>
             <p id="login-msg" style="margin-top:20px; color:#f87171;"></p>
         </div>
