--- a/index.html
+++ b/index.html
@@ -68,9 +68,14 @@
             </div>
 
             <!-- Dynamic Menus (ID hooks for script.js) -->
+
             <nav class="nav-menu" id="admin-menu" style="display:none;">
 
+
                 <div class="nav-item active" onclick="loadStats()"><span>Dashboard</span></div>
+                <div class="nav-item" onclick="loadView('newbooking')"><span>New Reservation</span></div>
+                <div class="nav-item" onclick="loadView('add_room')"><span>Add Room</span></div>
+                <div class="nav-item" onclick="loadView('add_staff')"><span>Register User</span></div>
                 <div class="nav-item" onclick="loadView('rooms')"><span>Suites</span></div>
                 <div class="nav-item" onclick="loadView('staff')"><span>Personnel</span></div>
                 <div class="nav-item" onclick="loadView('bookings')"><span>Guests</span></div>
